5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1758_672.log
== TEST (2019-05-23 10:13:56) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = (int(input("Numero inteiro: "))
en = ones(n, dtype = int)
print(en)
-- ERROR:
File "XXXX", line 4
    en = ones(n, dtype = int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = (int(input("Numero inteiro: "))
en = ones(n, dtype=int)
print(en)
-- ERROR:
File "XXXX", line 4
    en = ones(n, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:11) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = eval(input("Numero inteiro: "))
en = ones(n, dtype=int)
print(en)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = eval(input("Numero inteiro: "))
en = ones(n, dtype=int)
print(en)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:15:56) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = eval(input("Numero inteiro: "))
en = ones(n, dtype=int)
print(en)
-- EXECUTION TIME:
0.374745
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
